[package]
name = "express"
version = "0.1.0"
edition = "2021"
description = "express is a gui framework built using rust-lang with web view support"

[dependencies]
web-view = "0.4.1"
strfmt = "0.1.6"
base64 = "0.10.1"
json = "0.11.15"
rsass = "0.11.0"
html-minifier = "1.1.14"

[build-dependencies]
rsass = "0.11.0"
base64 = "0.10.1"